grammars/tree-sitter-java-frameworks/grammar.js
    program: $ => repeat($._toplevel_statement),

    _toplevel_statement: $ => choice(
      $.statement,
      $.method_declaration,
    ),

    // Literals

    string_literal: $ => choice($.jdbc_connection_string, $._string_literal, $._multiline_string_literal),
    _string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_fragment,
        $.escape_sequence,
        $.string_interpolation,
      )),
      '"',
    ),
    _multiline_string_literal: $ => seq(
      '"""',
      repeat(choice(
        alias($._multiline_string_fragment, $.multiline_string_fragment),
        $._escape_sequence,
        $.string_interpolation,
      )),
      '"""',
    ),
    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.

    string_fragment: _ => token.immediate(prec(1, /[^"\\]+/)),
    null_literal: _ => 'null',

    // Expressions

    instanceof_expression: $ => prec(PREC.REL, seq(
      field('left', $.expression),
      'instanceof',
      optional('final'),
      choice(
        seq(
          field('right', $._type),
          optional(field('name', choice($.identifier, $._reserved_identifier))),
        ),
        field('pattern', $.record_pattern),
      ),
    )),

    jsf_backend_object_creation_expression: $ => prec.right(PREC.OBJ_INST + 1, seq(
      'new',
      choice(
        seq(
          repeat($._annotation),
          field('type_arguments', $.type_arguments),
          repeat($._annotation),
        ),
        repeat($._annotation),
      ),
      field('type', choice($.jsf_backend_type, $.jsf_backend_generic_type)),
      field('arguments', $.argument_list),
      optional($.class_body),
    )),

    primefaces_backend_object_creation_expression: $ => prec.right(PREC.OBJ_INST + 1, seq(
      'new',
      choice(
        seq(
          repeat($._annotation),
          field('type_arguments', $.type_arguments),
          repeat($._annotation),
        ),
        repeat($._annotation),
      ),
      field('type', choice($.primefaces_backend_type, $.primefaces_backend_generic_type)),
      field('arguments', $.argument_list),
      optional($.class_body),
    )),

    jsf_backend_static_field_access: $ => prec(PREC.OBJ_ACCESS + 1, seq(
      field('object', $.jsf_backend_type),
      '.',
      field('field', choice($.identifier, $._reserved_identifier)),
    )),

    method_invocation: $ => seq(
      choice(
        field('name', choice($.identifier, $._reserved_identifier)),
        seq(
          field('object', choice($.primary_expression, $.super)),
          '.',
          optional(seq(
            $.super,
            '.',
          )),
          field('type_arguments', optional($.type_arguments)),
          field('name', choice($.identifier, $._reserved_identifier)),
        ),
      ),
      field('arguments', $.argument_list),
    ),

    jsf_context_method_invocation: $ => prec(PREC.OBJ_ACCESS + 1, seq(
      field('object', $.jsf_backend_type),
      '.',
      field('name', $.jsf_context_method_identifier),
      field('arguments', $.argument_list),
    )),

    primefaces_backend_method_invocation: $ => prec(PREC.OBJ_ACCESS + 1, seq(
      field('object', $.primefaces_backend_type),
      '.',
      field('name', $.primefaces_backend_method_identifier),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq('(', commaSep($.expression), ')'),

    type_arguments: $ => seq(
      '<',
      commaSep(choice($._type, $.wildcard)),
      '>',
    ),

    block: $ => seq(
      '{', repeat($.statement), '}',
    ),

    expression_statement: $ => seq(
      $.expression,
      ';',
    ),

    return_statement: $ => seq(
      'return',
      optional($.expression),
      ';',
    ),

    _annotation: $ => choice(
      $.framework_marker_annotation,
      $.framework_annotation,
      $.marker_annotation,
      $.annotation,
    ),

    framework_marker_annotation: $ => prec(1, seq(
      '@',
      field('name', choice($.framework_annotation_identifier, $.framework_scoped_annotation_name, $.framework_qualified_annotation_name)),
    )),

    framework_annotation: $ => prec(1, seq(
      '@',
      field('name', choice($.framework_annotation_identifier, $.framework_scoped_annotation_name, $.framework_qualified_annotation_name)),
      field('arguments', $.annotation_argument_list),
    )),

    framework_qualified_annotation_name: $ => seq(
      $.framework_qualified_name,
    ),

    annotation_argument_list: $ => seq(
      '(',
      choice(
        $._element_value,
        commaSep($.element_value_pair),
      ),
      ')',
    ),

    element_value_pair: $ => seq(
      field('key', choice($.identifier, $._reserved_identifier)),
      '=',
      field('value', $._element_value),
    ),

    _element_value: $ => prec(PREC.ELEMENT_VAL, choice(
      $.expression,
      $.element_value_array_initializer,
      $._annotation,
    )),

    package_declaration: $ => seq(
      repeat($._annotation),
      'package',
      $._name,
      ';',
    ),

    framework_import_declaration: $ => prec(1, seq(
      'import',
      optional('static'),
      field('name', $.framework_qualified_name),
      optional(seq('.', $.asterisk)),
      ';',
    )),

    framework_qualified_name: _ => token(prec(1, choice(
      /org\.springframework(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /javax\.persistence(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /jakarta\.persistence(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.hibernate(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /java\.sql(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /javax\.sql(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.apache\.axis(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.apache\.axis2(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /javax\.xml\.bind(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /jakarta\.xml\.bind(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /javax\.xml\.ws(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /jakarta\.xml\.ws(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /javax\.jws(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /jakarta\.jws(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /net\.sf\.jasperreports(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.bouncycastle(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /io\.jsonwebtoken(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /springfox(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /com\.thoughtworks\.xstream(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /lombok(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /com\.fasterxml\.jackson(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /com\.google\.gson(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.slf4j(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.apache\.log4j(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.apache\.logging\.log4j(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.apache\.commons(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.apache\.http(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.apache\.axiom(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /io\.swagger(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.aspectj(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.jboss\.logging(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /javax\.ws(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /jakarta\.ws(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /javax\.mail(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /jakarta\.mail(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /javax\.activation(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /jakarta\.activation(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /javax\.crypto(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /javax\.servlet(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /jakarta\.servlet(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /javax\.faces(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /jakarta\.faces(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.primefaces(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /javax\.transaction(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /jakarta\.transaction(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /javax\.inject(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /jakarta\.inject(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /javax\.validation(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /jakarta\.validation(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.junit(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /junit\.framework(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.mockito(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /com\.itextpdf(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /com\.google\.firebase(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /com\.nimbusds\.jose(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.jose4j(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.jasypt(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /com\.ulisesbocchio\.jasyptspringboot(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.jfree(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /ch\.qos\.logback(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /io\.netty(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /reactor\.netty(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /com\.google\.auth(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /org\.json(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /net\.coobird\.thumbnailator(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /javax\.annotation(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /jakarta\.annotation(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /oracle\.jdbc(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /oracle\.sql(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
      /com\.microsoft\.sqlserver\.jdbc(?:\.[A-Za-z_][A-Za-z0-9_]*)*/,
    ))),

    framework_annotation_identifier: _ => token(choice(...FRAMEWORK_ANNOTATIONS)),

    class_declaration: $ => seq(
      optional($.modifiers),
      'class',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      optional(field('superclass', $.superclass)),
      optional(field('interfaces', $.super_interfaces)),
      optional(field('permits', $.permits)),
      field('body', $.class_body),
    ),

    modifiers: $ => repeat1(choice(
      $._annotation,
      'public',
      'protected',
      'private',
      'abstract',
      'static',
      'final',
      'strictfp',
      'default',
      'synchronized',
      'native',
      'transient',
      'volatile',
      'sealed',
      'non-sealed',
    )),

    superclass: $ => seq(
      'extends',
      $._type,
    ),

    super_interfaces: $ => seq(
      'implements',
      $.type_list,
    ),

    type_list: $ => seq(
      $._type,
      repeat(seq(',', $._type)),
    ),

    class_body: $ => seq(
      '{',
      repeat($._class_body_declaration),
      '}',
    ),

    _class_body_declaration: $ => choice(
      $.field_declaration,
      $.record_declaration,
      $.method_declaration,
      $.compact_constructor_declaration, // For records.
      $.class_declaration,
      $.interface_declaration,
      $.annotation_type_declaration,
      $.enum_declaration,
      $.block,
      $.static_initializer,
      $.constructor_declaration,
      ';',
    ),

    _name: $ => choice(
      $.identifier,
      $._reserved_identifier,
      $.scoped_identifier,
    ),

    field_declaration: $ => seq(
      optional($.modifiers),
      field('type', $._unannotated_type),
      $._variable_declarator_list,
      ';',
    ),

    _variable_declarator_list: $ => commaSep1(
      field('declarator', $.variable_declarator),
    ),

    variable_declarator: $ => seq(
      $._variable_declarator_id,
      optional(seq('=', field('value', $._variable_initializer))),
    ),

    _variable_declarator_id: $ => seq(
      field('name', choice($.identifier, $._reserved_identifier, $.underscore_pattern)),
      field('dimensions', optional($.dimensions)),
    ),

    _variable_initializer: $ => choice(
      $.expression,
      $.array_initializer,
    ),

    _type: $ => choice(
      $._unannotated_type,
      $.annotated_type,
    ),

    _unannotated_type: $ => choice(
      $._simple_type,
      $.array_type,
    ),

    jsf_backend_type: _ => token(prec(1, choice(...JSF_BACKEND_TYPES))),

    jsf_context_method_identifier: _ => token(choice(...JSF_CONTEXT_METHODS)),

    primefaces_backend_type: _ => token(prec(1, choice(...PRIMEFACES_BACKEND_TYPES))),

    primefaces_backend_method_identifier: _ => token(choice(...PRIMEFACES_BACKEND_METHODS)),

    primefaces_backend_generic_type: $ => prec(PREC.GENERIC + 1, seq(
      $.primefaces_backend_type,
      $.type_arguments,
    )),

    generic_type: $ => prec.dynamic(PREC.GENERIC, seq(
      choice(
        alias($.identifier, $.type_identifier),
        $.scoped_type_identifier,
      ),
      $.type_arguments,
    )),

    boolean_type: _ => 'boolean',

    void_type: _ => 'void',

    _method_header: $ => seq(
      optional(seq(
        field('type_parameters', $.type_parameters),
        repeat($._annotation),
      )),
      field('type', $._unannotated_type),
      $._method_declarator,
      optional($.throws),
    ),

    formal_parameters: $ => seq(
      '(',
      choice(
        $.receiver_parameter,
        seq(
          optional(seq($.receiver_parameter, ',')),
          commaSep(choice($.formal_parameter, $.spread_parameter)),
        ),
      ),
      ')',
    ),

    formal_parameter: $ => seq(
      optional($.modifiers),
      field('type', $._unannotated_type),
      $._variable_declarator_id,
    ),

    throws: $ => seq(
      'throws', commaSep1($._type),
    ),

    local_variable_declaration: $ => seq(
      optional($.modifiers),
      field('type', $._unannotated_type),
      $._variable_declarator_list,
      ';',
    ),

    method_declaration: $ => seq(
      optional($.modifiers),
      $._method_header,
      choice(field('body', $.block), ';'),
    ),

    _reserved_identifier: $ => choice(
      prec(-3, alias(
        choice(
          'open',
          'module',
          'record',
          'with',
          'sealed',
        ),
        $.identifier,
      )),
      alias('yield', $.identifier),
    ),

    identifier: _ => /[\p{XID_Start}_$][\p{XID_Continue}\u00A2_$]*/,
